--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chiron+Hei+HK:ital,wght@0,200..900;1,200..900&family=Gravitas+One&family=Intel+One+Mono:ital,wght@0,300..700;1,300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&family=Playwrite+AU+NSW:wght@100..400&family=Playwrite+AU+QLD:wght@100..400&family=Playwrite+DE+SAS:wght@100..400&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
     <title>Coffee shop website</title>
 </head>
 <body>
@@ -12,7 +16,7 @@
         <div class="container header-container">
             <a href="#" class="logo">
                 <div class="logo-text">Brew<span>Haven</span></div>
-                <i class="fa-solid fa-mug-hot"></i>
+                <i class="fa-solid fa-mug-hot logo-icon"></i>
             </a>
 
             <nav>
@@ -29,6 +33,25 @@
             </div>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <div class="hero-container">
+                <div class="hero-subtitle">
+                    <i class="fas fa-seedling"></i>
+                    Ethically Sourced Beans
+                </div>
+                <h1 class="hero-title">Artisan Coffee <br> <span>Crafted with Passion</span></h1>
+                <p class="hero-text">iscover single-origin coffees roasted to perfection in small batches for exceptional flavor.
+                    Experience the journey from bean to cup with our master roasters.
+                </p>
+                <div class="hero-button">
+                    <a href="#products" class="btn btn-primary">Explore Our Blends</a>
+                    <a href="#" class="btn btn-secondary">Visit Our Cafe</a>
+                </div>
+            </div>
+            <img src="../Web-pictures/Black Coffee_ The Bold Brew For Energy And Focus.jpeg" alt="">
+        </div>
+    </section>
     
     <script src="script.js"></script>
 </body>
