--- a/index.html
+++ b/index.html
@@ -49,9 +49,39 @@
                     <a href="#" class="btn btn-secondary">Visit Our Cafe</a>
                 </div>
             </div>
-            <img src="../Web-pictures/Black Coffee_ The Bold Brew For Energy And Focus.jpeg" alt="">
+            <img src="../Web-pictures/Black Coffee_ The Bold Brew For Energy And Focus.jpeg" alt="Black Coffee">
         </div>
     </section>
+
+    <!-- Products Section -->
+
+<section class="products" id="products">
+    <div class="container">
+        <div class="section-header">
+            <div class="section-subtitle">Our Coffee Selection</div>
+            <h2 class="section-title">Signature Coffee Blends</h2>
+            <p class="section-desc">Discover our carefully curated collection of premium coffee blends, each crafted with attention to detail and passion for quality.</p>
+        </div>
+        <div class="product-grid">
+            <div class="product-card">
+                <div class="product-img">
+                    <img src="../Web-pictures/coffee1.jpeg" alt="Ethiopian Yirgacheffe">
+                </div>
+                <div class="product-info">
+                    <div class="product-tag">BESTELLER</div>
+                    <h3 class="product-title">Ethiopian Yirgacheffe</h3>
+                    <p class="product-desc">A bright and floral coffee with notes of citrus and bergamot.</p>
+                    <div class="product-footer">
+                        <div class="product-price">$18.99</div>
+                        <div class="rating">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
     
     <script src="script.js"></script>
 </body>
